<resources>
    <string name="facebook_app_id">161235005842835</string>
    <string name="fb_login_protocol_scheme">fb161235005842835</string>
    <string name="app_name">Blue b</string>
    <string name="no_more_item">  No More \n Items</string>
    <string name="wait_loading">Please wait for loading ...</string>
    <string name="finish_loading">Loading finish please swipe</string>
    <string name="no_items_in_favorite">  No Items in \n favorite</string>
    <string name="tab_home">Home</string>
    <string name="tab_message">Messages</string>
    <string name="tab_adv">Add Post</string>
    <string name="tab_notifications_">Notices</string>
    <string name="tab_profile">Profile</string>
    <string name="search">Search</string>
    <string name="suggested">Suggested</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="select_category_message">Please select sub category</string>
    <string name="language">Language</string>
    <string name="vist_websaite">Visit website</string>
    <string name="see_in_google_maps">See in google maps</string>
    <string name="new_items">Items</string>
    <string name="new_offer">Offers</string>
    <string name="important_message">Important message</string>
    <string name="no_sub_cat">No sub categories to show</string>
    <string name="no_more_offers">Sad no result</string>
    <string name="price">Price</string>
    <string name="price_min">Fill min price please</string>
    <string name="price_man">Fill max price please</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="call">Call</string>
    <string name="aed">AED</string>
    <string name="offers">Offers</string>
    <string name="message_erp">Please select one of this following reasons</string>
    <string name="reports">Report</string>
    <string name="view_in">View in</string>
    <string name="google_maps">google maps</string>
    <string name="not_avalibale">Not available any more</string>
    <string name="out_of_stock">Out stock</string>
    <string name="fack_price">Fake price</string>
    <string name="pad_q">bad quality</string>
    <string name="out_of_stock_s">Out stock</string>
    <string name="fack_price_s">Fake price</string>
    <string name="pad_q_s">bad quality</string>
    <string name="set">Sets</string>
    <string name="bracelets">Bracelets</string>
    <string name="necklaces">Necklaces</string>
    <string name="rings">Rings</string>
    <string name="fast_food">Fast food</string>
    <string name="foot_anklet">Anklet</string>
    <string name="earring">Earrings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="set_s">Sets</string>
    <string name="bracelets_s">Bracelets</string>
    <string name="necklaces_s">Necklaces</string>
    <string name="rings_s">Rings</string>
    <string name="fast_food_s">Fast food</string>
    <string name="foot_anklet_s">Anklet</string>
    <string name="earring_s">Earrings</string>
    <string name="male_content">Press here to see male content</string>
    <string name="bg">Burger king</string>
    <string name="macdonalds">Macdonalds</string>
    <string name="hardees">Hardees</string>
    <string name="dominos">Dominos pizza</string>
    <string name="kfc">KFC</string>
    <string name="pizza_h">Pizza hut</string>
    <string name="subway">Subway</string>
    <string name="out_stok">This item out stock \n we are sorry</string>
    <string name="no_more_items">No more items in</string>
    <string name="category">Category</string>
    <string name="Result_number">Results number</string>
    <string name="show_results">Show results</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="see_all">See All</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="finale">Total price</string>
    <string name="check_out">Check out</string>
    <string name="just_now">Just now</string>
    <string name="min">minutes ago</string>
    <string name="hour">hours ago</string>
    <string name="day">days ago</string>
    <string name="week">weeks ago</string>
    <string name="month">months ago</string>
    <string name="year">years ago</string>
    <string name="more_items">items</string>
    <string name="promo_code">Promo code</string>
    <string name="ur_first_name_str">First name</string>
    <string name="ur_last_name_str">Last name</string>
    <string name="ur_user_name_str">User name</string>
    <string name="ur_error_redundancy_user_name_tv_str">This user name all ready used</string>
    <string name="ur_next_str">Next</string>
    <string name="ur_real_name_error">Please use real name</string>
    <string name="ur_number_not_allowed_message_str">Can not Add number</string>
    <string name="ur_first_name_error_empty_str">Please fill first name</string>
    <string name="ur_first_name_error_to_short_str">First name to short must be grater than 3 character</string>
    <string name="ur_first_name_error_to_long_str">First name to long must be less than 10 character</string>
    <string name="ur_last_name_error_empty_str">Please fill last name</string>
    <string name="ur_fn_and_ln_is_empty_str">Please fill first name and last name</string>
    <string name="ur_last_name_error_to_short_str">Last name to short must be grater than 3 character</string>
    <string name="ur_last_name_error_to_long_str">Last name to long must be less than 10 character</string>
    <string name="unap_title">User name and password</string>
    <string name="unap_set_user_name_and_password">Set user name and password</string>
    <string name="unap_user_name">User name</string>
    <string name="unap_password_name">Password</string>
    <string name="unap_un_and_p_is_empty">Please fill user name and password</string>
    <string name="unap_un_is_empty">Please fill user name</string>
    <string name="unap_p_is_empty">Please fill password</string>
    <string name="unap_p_to_short">Password must be bigger thn 6</string>
    <string name="unap_p_to_long">Password must be less than 10</string>
    <string name="unap_un_to_short">User name must be bigger than 4</string>
    <string name="unap_un_to_long">User name must be less than 10</string>
    <string name="unap_un_all_ready_use">User name all ready used</string>
    <string name="g_title">Gender</string>
    <string name="g_what_is_your_gender">What is your gender \?</string>
    <string name="g_male">Male</string>
    <string name="g_female">Female</string>
    <string name="g_error">Please select your gender</string>
    <string name="bd_title">Birthday</string>
    <string name="bd_what_is_your_birth_d">What is your birthday \?</string>
    <string name="phone_n_title">Phone number</string>
    <string name="get_l_title">Detect location</string>
    <string name="get_l_progress_d">Please wait</string>
    <string name="profile">Profile</string>
    <string name="stadium">Stadium</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="ms_search">Search</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_account">Create account</string>
    <string name="login">Log in</string>
    <string name="error">Error</string>
    <string name="ur_what_is_your_name">What is your name ?</string>
    <string name="login_fb">Log in  with facebook</string>
    <string name="login_g">Log in  with google</string>
    <string name="or">Or</string>
    <string name="member">Not a member ?</string>
    <string name="sinup">Sin Up</string>
    <string name="skip">Skip</string>
    <string name="just_search">Search</string>
    <string name="reset">Reset</string>
    <string name="select">Select</string>
    <string name="see_all_areas">See all areas</string>
    <string name="filter">Filter</string>
    <string name="storing">Storing</string>
    <string name="all">All</string>
    <string name="recent_viewed_ads">Recent Viewed Ads</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourite_ads">Favourite Ads</string>
    <string name="favourite">Favourite</string>
    <string name="help">help</string>
    <string name="contact_us">Contact us</string>
    <string name="abou_the_app">Abou the app</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="email_contact_us">Hello\@bagdones\.com</string>
    <string name="ra_50">\+ 50</string>
    <string name="ra_100">\+ 100</string>
    <string name="ra_150">\+ 150</string>
    <string name="ra_200">\+ 200</string>
    <string name="ra_250">\+ 250</string>
    <string name="ra_300">\+ 300</string>
    <string name="ra_350">\+ 350</string>
    <string name="ra_400">\+ 400</string>
    <string name="ra_450">\+ 450</string>
    <string name="ra_500">\+ 500</string>
    <string name="ra_600">\+ 600</string>
    <string name="ra_700">\+ 700</string>
    <string name="ra_800">\+ 800</string>
    <string name="ra_900">\+ 900</string>
    <string name="ra_1000">\+ 1\,000</string>
    <string name="ra_1500">\+ 1\,500</string>
    <string name="ra_2000">\+ 2\,000</string>
    <string name="ra_50_s">5</string>
    <string name="ra_100_s">100</string>
    <string name="ra_150_s">150</string>
    <string name="ra_200_s">200</string>
    <string name="ra_250_s">250</string>
    <string name="ra_300_s">300</string>
    <string name="ra_350_s">350</string>
    <string name="ra_400_s">400</string>
    <string name="ra_450_s">450</string>
    <string name="ra_500_s">500</string>
    <string name="ra_600_s">600</string>
    <string name="ra_700_s">700</string>
    <string name="ra_800_s">800</string>
    <string name="ra_900_s">900</string>
    <string name="ra_1000_s">1000</string>
    <string name="ra_1500_s">1500</string>
    <string name="ra_2000_s">2000</string>
    <string name="t_1000">\+ 1\,000</string>
    <string name="t_5000">\+ 5\,000</string>
    <string name="t_10000">\+ 10\,000</string>
    <string name="t_15000">\+ 15\,000</string>
    <string name="t_20000">\+ 20\,000</string>
    <string name="Cuff_Bracelet">Cuff Bracelet Sculpture</string>
    <string name="Cuff_Bracelet_des">Women\'s Bracelet Bangles Cuff Bracelet Sculpture Ladies Ethnic Italian Gold Plated Bracelet Jewelry Gold For Party Gift</string>
    <string name="offer_4">OFFER</string>
    <string name="Processing_Time">Processing Time\:</string>
    <string name="Processing_Time_con"> 2\-5 business days</string>
    <string name="Shipping_Time">Shipping Time\:</string>
    <string name="Shipping_Time_con"> Expedited Express1\-2 business days</string>
    <string name="Selling_Points">Selling Points</string>
    <string name="Selling_Points_Gender">1. Gender: Women\'s</string>
    <string name="Selling_Points_Material">2\. Material\: Gold Plated</string>
    <string name="Selling_Points_Jewelry">3\. Jewelry Type\: Cuff Bracelet Bracelet Bangles</string>
    <string name="Specifications">Specifications</string>
    <string name="Specifications_Gender">Gender\: Women\'s</string>
    <string name="Specifications_Design">Design\: Sculpture</string>
    <string name="Specifications_Type">Jewelry Type\: Cuff Bracelet\, Bracelet Bangles
                Width \(cm\)\: 1</string>
    <string name="Specifications_Material">Material\: Gold Plated</string>
    <string name="Specifications_Style">Style\: Italian\, Ladies\, Ethnic</string>
    <string name="Specifications_Shape">Shape\: irregular</string>
    <string name="Specifications_Features">Features\: Cool</string>
    <string name="Specifications_Occasion">Occasion\: Gift\, Party</string>
    <string name="Specifications_Length">Length of Bracelet \(cm\)\: 7</string>
</resources>