<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.registration.NameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ur_name_question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/ur_what_is_your_name"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/ur_error_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:text="@string/error"
            android:textColor="@color/colorRed2"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Dark.Dialog"
        android:weightSum="100">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="15dp"
            android:layout_weight="50">

            <android.support.design.widget.TextInputLayout
                style="@style/AppTheme.Dark.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/ur_first_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ur_first_name_str"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="15dp"
            android:layout_weight="50">

            <android.support.design.widget.TextInputLayout
                style="@style/AppTheme.Dark.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/ur_last_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ur_last_name_str"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">


        <Button
            android:id="@+id/ur_next_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login"
            android:text="@string/ur_next_str"
            android:textColor="@color/colorWhite"
            />


    </RelativeLayout>

</RelativeLayout>